tests/cases/should_fail/misc/expresionless_directive.stderr
error: expected an expression, however received a `;`
 --> $DIR/expresionless_directive.hash:4:11
3 |   // This directive does not have an expression
4 |   k := #dump;
  |             ^ here
